<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
      android:gravity="center"
      android:id="@+id/title"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      tools:text="Item 1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

  <TextView
      android:layout_marginTop="20dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title"
      android:id="@+id/qtyTxt"
      android:text="@string/quantity"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

  <EditText
      app:layout_constraintTop_toBottomOf="@id/qtyTxt"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/subBtn"
      android:id="@+id/qtyEditTxt"
      android:inputType="number"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

  <Button
      app:layout_constraintTop_toBottomOf="@id/qtyTxt"
      app:layout_constraintRight_toLeftOf="@id/addBtn"
      android:id="@+id/subBtn"
      android:text="@string/minus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <Button
      app:layout_constraintTop_toBottomOf="@id/qtyTxt"
      app:layout_constraintRight_toRightOf="parent"
      android:id="@+id/addBtn"
      android:text="@string/plus"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <TextView
      android:layout_marginTop="20dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/qtyEditTxt"
      android:id="@+id/disTxt"
      android:text="@string/discount"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

  <RadioGroup
      app:layout_constraintTop_toBottomOf="@id/disTxt"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:id="@+id/radio_group"
      android:orientation="horizontal"
      android:checkedButton="@+id/rBtn1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <RadioButton
          android:id="@+id/rBtn1"
          android:tag="0"
          android:checked="true"
          android:layout_weight="1"
          android:text="@string/discount_0"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>

      <RadioButton
          android:id="@+id/rBtn2"
          android:tag="10"
          android:layout_weight="1"
          android:text="@string/discount_10"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>

    <RadioButton
        android:id="@+id/rBtn3"
        android:tag="50"
        android:layout_weight="1"
        android:text="@string/discount_50"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <RadioButton
        android:id="@+id/rBtn4"
        android:tag="100"
        android:layout_weight="1"
        android:text="@string/discount_100"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

  </RadioGroup>

  <Button
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/saveBtn"
      app:layout_constraintTop_toBottomOf="@id/radio_group"
      android:id="@+id/cancelBtn"
      android:text="@string/cancel"
      tools:text="cancel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

  <Button
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/radio_group"
      app:layout_constraintLeft_toRightOf="@id/cancelBtn"
      android:id="@+id/saveBtn"
      android:text="@string/save"
      tools:text="save"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>