<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".library.LibraryFragment">

  <TextView
      android:padding="10dp"
      android:gravity="center"
      android:background="@color/colorPrimary"
      android:textColor="@android:color/white"
      android:textSize="22sp"
      android:id="@+id/header"
      app:layout_constraintTop_toTopOf="parent"
      android:text="@string/library"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <TextView
      app:layout_constraintTop_toBottomOf="@id/header"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:id="@+id/discount_txt"
      android:drawableEnd="@drawable/outline_keyboard_arrow_right_black_18"
      android:text="@string/all_discount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <TextView
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/discount_txt"
      android:id="@+id/list_txt"
      android:drawableEnd="@drawable/outline_keyboard_arrow_right_black_18"
      android:text="@string/all_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>