<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_border"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cart.CartFragment">

  <TextView
      app:layout_constraintTop_toTopOf="parent"
      android:padding="10dp"
      android:gravity="center"
      android:background="@color/colorPrimary"
      android:textColor="@android:color/white"
      android:textSize="22sp"
      android:id="@+id/header"
      android:text="@string/cart"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <android.support.v7.widget.RecyclerView
      android:id="@+id/cart_recycler"
      app:layout_constraintTop_toBottomOf="@id/header"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintBottom_toTopOf="@id/clearTxt"
      android:layout_width="match_parent"
      android:layout_height="0dp"/>

  <TextView
      android:id="@+id/totalTxt"
      app:layout_constraintLeft_toLeftOf="parent"
      android:text="@string/total"
      app:layout_constraintBottom_toTopOf="@id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <TextView
      android:id="@+id/totalPrice"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@id/price"
      tools:text="$500"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <TextView
      android:id="@+id/title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintBottom_toTopOf="@id/clearTxt"
      android:text="@string/discount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <TextView
      android:id="@+id/price"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@id/clearTxt"
      tools:text="$500"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <TextView
      app:layout_constraintBottom_toTopOf="@id/chargeTxt"
      android:id="@+id/clearTxt"
      android:gravity="center"
      android:textSize="24sp"
      android:layout_margin="5dp"
      android:textColor="@android:color/white"
      android:background="@android:color/holo_red_dark"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/clear_sale"/>

  <TextView
      android:id="@+id/chargeTxt"
      android:gravity="center"
      android:textSize="24sp"
      android:layout_margin="5dp"
      android:background="@drawable/bg_border"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:text="Charge $"/>

</android.support.constraint.ConstraintLayout>